Fix small screens getting cut off + move home text to about

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -49,7 +49,7 @@ body {
     width: 100%;
     flex: 1;
     overflow-y: auto;
-    padding: 1em 1em 1em 1em;
+    padding: 0 1em 0 1em;
     border: 2px solid rgba(255, 255, 255, 0.2);
     margin-bottom: 3em;
   }
@@ -79,37 +79,6 @@ a::after {
   content: "]";
 }
 
-/* When the screen is small, switch to column flex layout*/
-@media only screen and (max-width: 800px) {
-  html,
-  body {
-    overflow: auto;
-  }
-
-  #fg {
-    flex-direction: column;
-    gap: 20em;
-    height: auto;
-  }
-  #fg #content {
-    overflow-y: visible;
-    padding-bottom: 0;
-  }
-  #content {
-    align-items: center;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  #bg {
-    left: -115px;
-  }
-}
-
-img {
-  max-width: 100%;
-}
-
 #projects {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -134,4 +103,35 @@ img {
     /* font-size: 16px; */
     /* line-height: 1.5; */
   }
+}
+
+/* When the screen is small, switch to column flex layout*/
+@media only screen and (max-width: 800px) {
+  html,
+  body {
+    overflow-y: auto;
+  }
+
+  #fg {
+    flex-direction: column;
+    gap: 20em;
+    height: auto;
+  }
+  #fg #content {
+    overflow-y: visible;
+    box-sizing: border-box;
+  }
+  #content {
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #bg {
+    left: -115px;
+  }
+}
+
+img {
+  max-width: 100%;
 }
